infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - k8s.manudev.dev
      secretName: hello-tls
  rules:
    - host: k8s.manudev.dev
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: hello-v1-svc
                port:
                  number: 80
            path: /
